2007-01-26  Martin Leidig  <mleidig@schlund.de>

	Trim attribute now only supports boolean values, removed on/off
	option (cause someone didn't like and I don't mind)
	* projects/core/build/iwrapper.xsl	
	* projects/core/schema/interfacewrapper200401.xsd

2007-01-26  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/create_depend.xsl: fixed strange incompatibility
	between saxon and xalan transformations, which  could cause wrong output 
	encoding	

2007-01-23  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/targets/TargetGenerator.java: removed resetting
	of TargetGenerationReport before each generation iteration (this caused
	that generation exceptions were not reported in exception summary)
	* src/de/schlund/pfixxml/ImageGeometry.java: avoid NullPointerException
	if image doesn't exist, just proceed without the image information (it's
	a common case cause in a lot of projects users wrongly use attribute
	value templates within the image source attribute, which weren't yet
	evaluated at the time the extension function is called, for the sake of
	backwards compatibility we should still support this behaviour)

2007-01-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/ProjectFactoryServiceImpl.java (init): 
	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java: 
	Added code to handle missing <name> or <comment> tag within a project definition.
	Changed locking to ensure that an exception is thrown when the editor app is
	called but has not been initialized instead of dead-locking the thread.

2007-01-22  Martin Leidig  <mleidig@schlund.de>

	Added the optional IWrapper parameter attribute 'trim', which 
	provides the option to enable/disable the automatic trimming of 
	request parameters. The backwards compatible default behaviour, 
	in absence of the attribute, is to trim incoming parameters 
	before further processing (trim="true|false|on|off").
